python/examples/boolean/compare.py
x = 12
y = 3
result = "Yes" if x > y else "No"
print(result) # Yes

x = "12"
y = "3"
print("Yes" if x > y else "No") # No

x = "12"
y = 3
print("Yes" if x > y else "No") # Yes

x = 12
y = "3"
print("Yes" if x > y else "No")  # No

